--- a/pages/cadastroEfinance.html
+++ b/pages/cadastroEfinance.html
@@ -71,10 +71,13 @@
           <label for="codigoPostal" class="form-label fs-6 text-light ms-2">Código Postal:</label>
           <input type="text" name="codigoPostal" id="codigoPostal" class="form-control input-custom">
         </div>
-
-        <div class="col d-flex justify-content-end margin-right-lg margin-top-md">
+        
+        <div class="col margin-top-md">
+          <div class="col-sm-6 my-3">
           <button type="button" class="btn btn-efinance" style="width: 20em;">Verificar</button>
         </div>
+      </div>
+        
       </div>
 
       <div class="row my-3">
